--- a/main/order/orderStyle.css
+++ b/main/order/orderStyle.css
@@ -6,7 +6,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f2f5;
+            background-color: #DCDCDC;
             color: #333;
         }
 
